--- a/sam-sverko/index.html
+++ b/sam-sverko/index.html
@@ -4,6 +4,6 @@
     <title>Sam Sverko</title>
 </head>
 <body>
-    <h1>You can do anything at SamSverko.com</h1>
+    <h1>You can do anything at samsverko.com</h1>
 </body>
 </html>
