Add navbar, and begin home section
- Add Bootstrap
- Add hero image
- Update styling

--- a/index.html
+++ b/index.html
@@ -1,9 +1,70 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-    <title>Sam Sverko</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- cdn Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- local CSS -->
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Sam Sverko's Web Portfolio</title>
 </head>
 <body>
-    <h1>You can do anything at samsverko.com</h1>
+    <section id="section-home">
+        <nav class="navbar navbar-expand-md navbar-light">
+            <a class="navbar-brand font-weight-bold" href="https://www.samsverko.com">Sam Legros</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Tech Toolbox</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Skills</a>
+                    </li>
+                </ul>
+                <span class="navbar-text">
+                    <button class="btn"><span class="button-text">CONTACT</span></button>
+                </span>
+            </div>
+        </nav>
+        <table id="home-table">
+            <tbody>
+                <tr>
+                    <td class="align-middle" id="home-name">
+                        <p>Hi, I'm SAM!</p>
+                        <p>I'm a web developer.</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section id="section-about" class="border">
+        <h2>Hello there</h2>
+    </section>
+
+
+
+
+
+    <!-- local JavaScript -->
+    <script src="scripts/script.js"></script>
+    <!-- cdn jQuery 3.3.1 slim -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- cdn Popper.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <!-- cdn Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- local LiveReload -->
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
