Build about me section
- Add profile headshots
- Fix x-overflow scroll issue

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- local CSS -->
     <link rel="stylesheet" href="styles/style.css">
-    <title>Sam Sverko's Web Portfolio</title>
+    <title>Portfolio | Sam Legros</title>
 </head>
 <body>
     <section id="section-home">
@@ -48,8 +48,28 @@
         </table>
     </section>
 
-    <section id="section-about" class="border">
-        <h2>Hello there</h2>
+    <section id="section-about">
+        <h1>A little bit about me</h1>
+        <div class="row">
+            <div class="col-12">
+                <img src="images/headshot_sam_legros_round.png" alt="headshot of Sam Legros" class="img-round rounded">
+            </div>
+            <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
+                <p class="font-weight-bold">Hi, I'm Sam and I'm a web developer.</p>
+                <p>I'm a natural problem solver who is not afraid of a challenge and believe that being able to have fun on the job makes any project&nbsp;possible.</p>
+                <p>I'm a "big picture"​ thinker who is able to visualize problems before they happen, leading to balanced, complete, and responsive projects in inclusive design and web development. Web development is my specialty, but working with people, for people is what I do&nbsp;best.</p>
+                <div class="col-12 text-center text-md-left" style="padding: 25px 0px;">
+                    <a href="https://www.linkedin.com/in/samlegros/" target="_blank"><button type="button" value="Go to Sam Legros' LinkedIn page" class="btn"><span class="button-text">VIEW MY LINKEDIN</span></button></a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
+                <p>I believe in working towards greater digital access for all, the passion and dedication of small teams, the unlimited potential of technology, and the power of a good night's&nbsp;sleep.</p>
+                <p>I'm a recent <a href="https://www.ryerson.ca/graduate/digitalmedia/" target="_blank" class="site-link">Master of Digital Media</a> grad, specializing in accessibility in web development and have a BFA in <a href="https://ryersonrta.ca/programs/bfa-new-media" target="_blank" class="site-link">New Media</a> from Ryerson University and am currently based out of&nbsp;Toronto.</p>
+                <p>When I'm not working, you can find me cooking, <a href="https://www.goodreads.com/user/show/46470866-sam-legros" target="_blank" class="site-link">reading</a>, and playing games (HotS, Destiny 2, or Horizon: Zero Dawn ← definitely recommend), usually in that&nbsp;order.</p>
+                <div class="row">
+                </div>
+            </div>
+        </div>
     </section>
 
 
