Build tech toolbox section
- Add Devicon cdn to project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- cdn Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- cdn Devicon CSS -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- local CSS -->
     <link rel="stylesheet" href="styles/style.css">
     <title>Portfolio | Sam Legros</title>
@@ -49,7 +51,7 @@
     </section>
 
     <section id="section-about">
-        <h1>A little bit about me</h1>
+        <h2>A little bit about me</h2>
         <div class="row">
             <div class="col-12">
                 <img src="images/headshot_sam_legros_round.png" alt="headshot of Sam Legros" class="img-round rounded">
@@ -72,7 +74,138 @@
         </div>
     </section>
 
+    <section id="section-toolbox">
+        <div class="row">
+            <div class="col-12">
+                <h2>My tech toolbox</h2>
+                <p class="color-text-grey">My tech toolbox is always growing!</p>
+            </div>
+            <div id="toolbox-container">
+                <table class="toolbox-item"><!-- Amazon Web Services -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-amazonwebservices-original"></i><br class="toolbox-text-spacer">
+                                    Amazon Web Services
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- Bootstrap -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-bootstrap-plain"></i><br class="toolbox-text-spacer">
+                                    Bootstrap
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- CSS3 -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-css3-plain"></i><br class="toolbox-text-spacer">
+                                    CSS3
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- Git -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-git-plain"></i><br class="toolbox-text-spacer">
+                                    Git
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- GitHub -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-github-plain"></i><br class="toolbox-text-spacer">
+                                    GitHub
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- HTML5 -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-html5-plain"></i><br class="toolbox-text-spacer">
+                                    HTML5
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- JavaScript -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-javascript-plain"></i><br class="toolbox-text-spacer">
+                                    JavaScript
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- jQuery -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-jquery-plain"></i><br class="toolbox-text-spacer">
+                                    jQuery
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- mySQL -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-mysql-plain"></i><br class="toolbox-text-spacer">
+                                    mySQL
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="toolbox-item"><!-- PHP -->
+                    <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <p>
+                                    <i class="devicon-php-plain"></i><br class="toolbox-text-spacer">
+                                    PHP
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
+
+    </section>
 
 
 
