Update toolbox item links

--- a/index.html
+++ b/index.html
@@ -84,120 +84,120 @@
                 <table class="toolbox-item"><!-- Amazon Web Services -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://aws.amazon.com/" target="_blank">
                                 <p>
                                     <i class="devicon-amazonwebservices-original"></i><br class="toolbox-text-spacer">
                                     Amazon Web Services
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- Bootstrap -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://getbootstrap.com/" target="_blank">
                                 <p>
                                     <i class="devicon-bootstrap-plain"></i><br class="toolbox-text-spacer">
                                     Bootstrap
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- CSS3 -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS3" target="_blank">
                                 <p>
                                     <i class="devicon-css3-plain"></i><br class="toolbox-text-spacer">
                                     CSS3
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- Git -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://git-scm.com/" target="_blank">
                                 <p>
                                     <i class="devicon-git-plain"></i><br class="toolbox-text-spacer">
                                     Git
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- GitHub -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://github.com/" target="_blank">
                                 <p>
                                     <i class="devicon-github-plain"></i><br class="toolbox-text-spacer">
                                     GitHub
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- HTML5 -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">
                                 <p>
                                     <i class="devicon-html5-plain"></i><br class="toolbox-text-spacer">
                                     HTML5
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- JavaScript -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
                                 <p>
                                     <i class="devicon-javascript-plain"></i><br class="toolbox-text-spacer">
                                     JavaScript
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- jQuery -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://jquery.com/" target="_blank">
                                 <p>
                                     <i class="devicon-jquery-plain"></i><br class="toolbox-text-spacer">
                                     jQuery
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- mySQL -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="https://www.mysql.com/" target="_blank">
                                 <p>
                                     <i class="devicon-mysql-plain"></i><br class="toolbox-text-spacer">
                                     mySQL
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
                 <table class="toolbox-item"><!-- PHP -->
                     <tbody>
                         <tr>
-                            <td class="align-middle">
+                            <td class="align-middle"><a href="http://www.php.net/" target="_blank">
                                 <p>
                                     <i class="devicon-php-plain"></i><br class="toolbox-text-spacer">
                                     PHP
                                 </p>
-                            </td>
+                            </a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -206,8 +206,6 @@
 
 
     </section>
-
-
 
     <!-- local JavaScript -->
     <script src="scripts/script.js"></script>
