Fix toolbox item link spacing

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <td class="align-middle"><a href="https://aws.amazon.com/" target="_blank">
                                 <p>
                                     <i class="devicon-amazonwebservices-original"></i><br class="toolbox-text-spacer">
-                                    Amazon Web Services
+                                    AWS
                                 </p>
                             </a></td>
                         </tr>
