Begin portfolio section
- Add images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <img src="images/headshot_sam_legros_round.png" alt="headshot of Sam Legros" class="img-round rounded">
             </div>
             <div class="col-12 col-sm-10 offset-sm-1 col-md-6 offset-md-0 color-text-grey text-left">
-                <p class="font-weight-bold">Hi, I'm Sam and I'm a web developer.</p>
+                <p class="font-weight-bold">Hi, I'm Sam and I'm a web developer <span class="text-emoji align-middle">👨🏻‍💻</span></p>
                 <p>I'm a natural problem solver who is not afraid of a challenge and believe that being able to have fun on the job makes any project&nbsp;possible.</p>
                 <p>I'm a "big picture"​ thinker who is able to visualize problems before they happen, leading to balanced, complete, and responsive projects in inclusive design and web development. Web development is my specialty, but working with people, for people is what I do&nbsp;best.</p>
                 <div class="col-12 text-center text-md-left" style="padding: 25px 0px;">
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-12">
                 <h2>My tech toolbox</h2>
-                <p class="color-text-grey">My tech toolbox is always growing!</p>
+                <p class="color-text-grey">My tech toolbox is always growing <span class="text-emoji align-middle">🔧</span></p>
             </div>
             <div id="toolbox-container">
                 <table class="toolbox-item"><!-- Amazon Web Services -->
@@ -203,8 +203,30 @@
                 </table>
             </div>
         </div>
+    </section>
 
-
+    <section id="section-portfolio">
+        <h2>Portfolio</h2>
+        <p class="color-text-grey">From Bootstrap to PHP, every project I work on is made with <span class="text-emoji align-middle">❤️</span></p>
+        <div id="portfolio-container">
+            <div class="portfolio-item">
+                <img src="images/portfolio_build_for_all.png" alt="Graphic of two people working together" class="img-fluid">
+                <div class="portfolio-item-details">
+                    <p class="portfolio-item-title">Build for All</p>
+                    <p class="font-family-text portfolio-item-tools">
+                        <span class="badge badge-primary">Bootstrap</span>
+                        <span class="badge badge-secondary">CSS3</span>
+                        <span class="badge badge-success">HTML5</span>
+                        <span class="badge badge-danger">JavaScript</span>
+                        <span class="badge badge-warning">jQuery</span>
+                        <span class="badge badge-info">mySQL</span>
+                        <span class="badge badge-light">PHP</span>
+                    </p>
+                    <p>Providing startups with accessible and inclusive resources</p>
+                    <a href="http://buildforall.ca/" target="_blank"><button class="btn"><span class="button-text">SEE LIVE</span></button></a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- local JavaScript -->
