Build connected section
- Update navbar links

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                         <a class="nav-link" href="#">Tech Toolbox</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portfolio</a>
+                        <a class="nav-link" href="#">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#">Social</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    <a href="mailto:email@samlegros.com"><button class="btn"><span class="button-text">CONTACT</span></button></a>
+                    <a href="mailto:email@samlegros.com?subject=Awesome%20Website!"><button class="btn"><span class="button-text">CONTACT</span></button></a>
                 </span>
             </div>
         </nav>
@@ -79,7 +79,7 @@
     <section id="section-toolbox">
         <div class="row">
             <div class="col-12">
-                <h2>My tech toolbox</h2>
+                <h2>Inside my tech toolbox</h2>
                 <p class="color-text-grey">My tech toolbox is always growing <span class="text-emoji align-middle">🔧</span></p>
             </div>
             <div id="toolbox-container">
@@ -208,7 +208,7 @@
     </section>
 
     <section id="section-portfolio">
-        <h2>Portfolio</h2>
+        <h2>A few projects under my belt</h2>
         <p class="color-text-grey">From Bootstrap to PHP, every project I work on is made with <span class="text-emoji align-middle">❤️</span></p>
         <div id="portfolio-items-container">
             <div class="card"><!-- Build for All -->
@@ -488,6 +488,19 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="section-contact">
+        <h2>Let's stay connected</h2>
+        <p class="color-text-grey">There are many ways we can get in touch <span class="text-emoji align-middle">👋</span></p>
+
+        <div id="contact-icons-container">
+            <a href="https://github.com/samlegros" target="_blank"><i class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/samlegros/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://twitter.com/SamLegros" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            <a href="mailto:email@samlegros.com?subject=Awesome%20Website!" target="_blank"><i class="fas fa-envelope-square"></i></a>
+            <a href="tel:+16472299122" target="_blank"><i class="fas fa-phone-square"></i></a>
         </div>
     </section>
 
