--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
     <footer>
         <p>Website made with <i class="fas fa-heart"></i> by Sam Legros in 2018</p>
     </footer>
+    <a data-scroll href="#section-home"><button class="btn" id="back-to-top-button" title="Go to top"><i class="fas fa-arrow-up"></i></button></a>
     <!-- cdn jQuery 3.3.1 slim -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- cdn Popper.js 1.14.3 -->
